api для таск менеджера
